@@ -5,6 +5,7 @@ import com.example.librarymanagement.dto.AuthorWithBooksDto;
 import com.example.librarymanagement.dto.BookDto;
 import com.example.librarymanagement.entity.Author;
 import com.example.librarymanagement.entity.Book;
+import com.example.librarymanagement.exception.ResourceNotFoundException;
 import com.example.librarymanagement.mapper.AuthorMapper;
 import com.example.librarymanagement.mapper.BookMapper;
 import com.example.librarymanagement.repository.AuthorRepository;
@@ -12,16 +13,13 @@ import com.example.librarymanagement.repository.BookRepository;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
 
 import java.util.List;
-
+import java.util.stream.Collectors;
 
 @Service
-
 public class AuthorService {
-    private static final Logger log = LoggerFactory.getLogger(AuthorService.class);
+
     private final AuthorRepository authorRepository;
     private final BookRepository bookRepository;
     private final AuthorMapper authorMapper;
@@ -47,13 +45,13 @@ public class AuthorService {
     public List<AuthorDto> getAllAuthors() {
         return authorRepository.findAll().stream()
                 .map(authorMapper::toDto)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     public AuthorDto getAuthorById(Long id) {
         return authorRepository.findById(id)
                 .map(authorMapper::toDto)
-                .orElse(null);
+                .orElseThrow(() -> new ResourceNotFoundException("Автор не найден с id: " + id));
     }
 
     public AuthorDto updateAuthor(Long id, AuthorDto authorDto) {
@@ -66,31 +64,27 @@ public class AuthorService {
                     Author updatedAuthor = authorRepository.save(existingAuthor);
                     return authorMapper.toDto(updatedAuthor);
                 })
-                .orElse(null);
+                .orElseThrow(() -> new ResourceNotFoundException("Автор не найден с id: " + id));
     }
 
     public boolean deleteAuthor(Long id) {
-        return authorRepository.findById(id)
-                .map(author -> {
-                    List<Book> books = bookRepository.findByAuthorEntityId(id);
-                    for (Book book : books) {
-                        book.setAuthorEntity(null);
-                        bookRepository.save(book);
-                    }
-                    authorRepository.delete(author);
-                    return true;
-                })
-                .orElse(false);
+        if (authorRepository.existsById(id)) {
+            authorRepository.deleteById(id);
+            return true;
+        }
+        return false;
     }
 
     public void saveAuthorWithBooksWithoutTransaction(AuthorWithBooksDto dto) {
         Author author = authorMapper.toEntity(dto.getAuthor());
         Author savedAuthor = authorRepository.save(author);
+        System.out.println("Автор сохранен: " + savedAuthor.getId());
 
         for (BookDto bookDto : dto.getBooks()) {
             bookDto.setAuthorId(savedAuthor.getId());
             Book book = bookMapper.toEntity(bookDto);
             bookRepository.save(book);
+            System.out.println("Книга сохранена: " + book.getTitle());
 
             if (book.getTitle().contains("Ошибка")) {
                 throw new RuntimeException("Ошибка при сохранении книги!");
@@ -102,11 +96,13 @@ public class AuthorService {
     public void saveAuthorWithBooksWithTransaction(AuthorWithBooksDto dto) {
         Author author = authorMapper.toEntity(dto.getAuthor());
         Author savedAuthor = authorRepository.save(author);
+        System.out.println("Автор сохранен: " + savedAuthor.getId());
 
         for (BookDto bookDto : dto.getBooks()) {
             bookDto.setAuthorId(savedAuthor.getId());
             Book book = bookMapper.toEntity(bookDto);
             bookRepository.save(book);
+            System.out.println("Книга сохранена: " + book.getTitle());
 
             if (book.getTitle().contains("Ошибка")) {
                 throw new RuntimeException("Ошибка при сохранении книги!");
